tests/errors/doubleindex.fut
-- ==
-- error: xss\[0, 1\]

def main (xss: [][]i32) = xss[0][1]
